# PointPillars_MultiHead_40FPS

./: .gitignore  CMakeLists.txt  bootstrap.yaml
nodes/: det3d_publisher.cc  det3d_publisher.hpp  pc_infer.cc
pointpillars/: CMakeLists.txt
pointpillars/cfgs/: pointpillars_hv_fpn_sbn-all_8xb4-2x_nus-3d.yaml
pointpillars/include/: bbox.h  check.h  dtype.h  pointpillars.h  postprocess.h  preprocess.h
pointpillars/src/: pointpillars.cc  pointpillars_pybind.cpp  postprocess_multi_head.cu  postprocess_single_head.cu  preprocess.cu  scatter.cu
test/: pointpillars_test.cc
tools/: infer.py  viewer.py
tools/visual_tools/: __init__.py
